<resources>
    <string name="app_name">Fitools</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_username">爱运动的黄油面包干</string><!--用户名-->
    <string name="my_dynamic">15</string><!--动态-->
    <string name="my_follow">10</string><!--关注-->
    <string name="my_fans">68</string><!--粉丝-->
    <string name="my_sportime">0</string><!--总运动时长-->
    <string name="my_ranking">12</string><!--本周好友排名-->
    <string name="fit_option_name">高强度全身燃脂</string>
    <string name="fit_option_time">7</string>
</resources>
