<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgdgray"
    tools:context="com.example.fitools.jiangshengda.MyFragment">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/User_information_bar"
        android:background="@mipmap/my_topbgd"
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <RelativeLayout
            android:id="@+id/my_navigation_top"
            android:layout_width="match_parent"
            android:layout_height="170dp">
            <com.example.fitools.jiangshengda.CircleImageView
                android:id="@+id/Circle_head"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/mitao"
                />
            <TextView
                android:id="@+id/my_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/default_username"
                android:layout_toRightOf="@+id/Circle_head"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/my_dynamic"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/Circle_head"
                android:layout_marginTop="105dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:text="@string/my_dynamic"/>
            <TextView
                android:id="@+id/my_dynamic_static"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/my_dynamic"
                android:layout_marginTop="105dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:text="动态"/>
            <TextView
                android:id="@+id/my_verticaline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_toEndOf="@+id/my_dynamic_static"
                android:layout_marginTop="95dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:text="|"/>
            <TextView
                android:id="@+id/my_follow"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/my_verticaline1"
                android:layout_marginTop="105dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:text="@string/my_follow"/>
            <TextView
                android:textSize="16dp"
                android:id="@+id/my_follow_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/my_follow"
                android:layout_marginTop="105dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:text="关注"/>
            <TextView
                android:id="@+id/my_verticaline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_toEndOf="@+id/my_follow_static"
                android:layout_marginTop="95dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:text="|"/>
            <TextView
                android:id="@+id/my_fans"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/my_verticaline2"
                android:layout_marginTop="105dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:text="@string/my_fans"/>
            <TextView
                android:id="@+id/my_fans_static"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/my_fans"
                android:layout_marginTop="105dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:text="粉丝"/>
            <ImageView
                android:id="@+id/my_setting"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:src="@mipmap/setting"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:alpha="0.5"
            android:background="@color/white"
            android:id="@+id/my_navigation_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:background="@drawable/shape_my_navigation"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </RelativeLayout>
            <RelativeLayout
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/my_sportime_static"
        android:text="总运动时长"
        android:textSize="16dp"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/my_ranking_static"
        android:text="本周好友排名"
        android:textSize="16dp"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="215dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/my_sportime"
        android:textSize="40dp"
        android:textStyle="bold"
        android:text="@string/my_sportime"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/my_sportime_static2"
        android:text="分钟"
        android:textSize="16dp"
        android:layout_marginTop="245dp"
        android:layout_marginLeft="110dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/my_ranking"
        android:text="@string/my_ranking"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="255dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/my_ranking_static2"
        android:text="名"
        android:layout_marginTop="245dp"
        android:layout_marginLeft="315dp"
        android:layout_width="wrap_content"
        android:textSize="16dp"
        android:layout_height="wrap_content" />
    <TableLayout
        android:layout_below="@+id/User_information_bar"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="@mipmap/my_lines"
        android:layout_height="300dp">
        <TableRow
            android:layout_weight="1">
            <RelativeLayout
                android:id="@+id/my_news"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/my_news_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/my_news"/>
                <TextView
                    android:id="@+id/my_news_text"
                    android:textSize="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/my_news_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的信息"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/my_statistics_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/my_statistics"/>
                <TextView
                    android:id="@+id/my_statistics_text"
                    android:textSize="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/my_statistics_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="运动统计"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/my_plan_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/my_plan"/>
                <TextView
                    android:id="@+id/my_plan_text"
                    android:textSize="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/my_plan_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="运动计划"/>
            </RelativeLayout>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/my_feets_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/my_feets"/>
                <TextView
                    android:id="@+id/my_feets_text"
                    android:textSize="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/my_feets_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="步数记录"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/my_weight_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/my_weight"/>
                <TextView
                    android:id="@+id/my_weight_text"
                    android:textSize="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/my_weight_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="体重记录"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/my_diet_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/my_diet"/>
                <TextView
                    android:id="@+id/my_diet_text"
                    android:textSize="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/my_diet_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="饮食记录"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>
